Fixes for upgrades